# ft_vox

./: Cargo.toml  README.md  cspell.json
assets/: THANKS.txt
scripts/: update_atlas.py
shaders/: crosshair.wgsl  light.wgsl  outline.wgsl  shader.wgsl  sky.wgsl  skybox.wgsl  voxels.wgsl
src/: aabb.rs  app.rs  assets.rs  biome.rs  block.rs  camera.rs  chunk.rs  coords.rs  face.rs  frustum.rs  instance.rs  lib.rs  light.wgsl  main.rs  model.rs  noise.rs  shader.wgsl  spline.rs  state.rs  texture.rs  uniforms.rs  utils.rs  vertex.rs  world.rs
