[package]
name = "ft_vox"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.23", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
glam = "0.30"
image = "0.25"
log = "0.4"
pollster = "0.4"
wgpu = "27"
wgpu_text = "27"
winit = "0.30"
