[package]
name = "ft_vox"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.25", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
glam = "0.32"
image = "0.25"
log = "0.4"
pollster = "0.4"
wgpu = "28"
wgpu_text = "28"
winit = "0.30"

[lints.rust]
# TODO

[lints.clippy]
cargo = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "deny", priority = -1 }
restriction = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "deny", priority = -1 }

# cargo
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"

# suspicious
blanket_clippy_restriction_lints = "allow"
