[package]
name = "ft_vox"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.25", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
glam = "0.32"
image = "0.25"
log = "0.4"
pollster = "0.4"
wgpu = "28"
wgpu_text = "28"
winit = "0.30"

[lints.rust]
# TODO

[lints.clippy]
cargo = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "deny", priority = -1 }
restriction = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "deny", priority = -1 }

# cargo
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"

# pedantic
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
items_after_statements = "allow"
many_single_char_names = "allow"
trivially_copy_pass_by_ref = "allow"
unreadable_literal = "allow"

# nursery
suboptimal_flops = "allow"
while_float = "allow"

# restriction
alloc_instead_of_core = "allow"
allow_attributes_without_reason = "allow"
arbitrary_source_item_ordering = "allow"
arithmetic_side_effects = "allow"
as_conversions = "allow"
default_numeric_fallback = "allow"
else_if_without_else = "allow"
expect_used = "allow"
float_arithmetic = "allow"
implicit_return = "allow"
indexing_slicing = "allow"
integer_division_remainder_used = "allow"
iter_over_hash_type = "allow"
min_ident_chars = "allow"
missing_assert_message = "allow"
missing_docs_in_private_items = "allow"
missing_inline_in_public_items = "allow"
missing_trait_methods = "allow"
partial_pub_fields = "allow"
question_mark_used = "allow"
redundant_test_prefix = "allow"
single_char_lifetime_names = "allow"
shadow_same = "allow"
shadow_reuse = "allow"
shadow_unrelated = "allow"
single_call_fn = "allow"
std_instead_of_alloc = "allow"
std_instead_of_core = "allow"
unseparated_literal_suffix = "allow"
unwrap_used = "allow"
wildcard_enum_match_arm = "allow"

# suspicious
blanket_clippy_restriction_lints = "allow"
